Add ItemUtil helper and improve InventoryGUI constructors